<resources>
    <string name="app_name">Ashira</string>
    <string name="title_activity_login" translatable="false">LoginActivity</string>
    <string name="monthly_membership">Monthly Membership</string>
    <string name="yearly_membership">Yearly Membership</string>
    <string name="play">Play</string>
    <string name="good_job">Good Job!</string>
    <string name="sing_again">Sing Again</string>
    <string name="playback">Watch</string>
    <string name="share">Share</string>
    <string name="share_save">Save and Share</string>
    <string name="promo">Jewish Karaoke App</string>
    <string name="app_logo">SHIRA</string>
    <string name="log_in_sign_up">Log In / Sign Up</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="save_recording">Save</string>
    <string name="back_to_home_dialog">Are you sure you want to exit</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="start">Start!</string>
    <string name="title_activity_video_player" translatable="false">VideoPlayer</string>
    <string name="hello_world" translatable="false">Hello Square World!</string>
    <string name="title_activity_playback" translatable="false">Playback</string>
    <string name="ok">OK</string>
    <string name="no_internet_alert">No internet connection</string>
    <string name="title_activity_sign_in" translatable="false">SignInActivity</string>
    <string name="sign_out">Sign Out</string>
    <string name="no_audio_code">You must allow access to your microphone to use Ashira app karaoke</string>
    <string name="mic_access_title">Microphone permission necessary</string>
    <string name="mic_access_text">Ashira karaoke needs microphone access.</string>
    <string name="sign_in_language">Sign in for free to watch and save your recordings</string>
    <string name="my_recordings">My Recordings</string>
    <string name="sign_in">Sign In</string>
    <string name="contact_us">Contact Us</string>
    <string name="policy">Privacy policy and contract</string>
    <string name="sign_in_title">Not a User</string>
    <string name="recording_sign_in_text">You must sign in to view recordings</string>
    <string name="no_recordings">Sorry,\n you have no recordings</string>
    <string name="open">view</string>
    <string name="continue_as_guest">Continue as Guest</string>
    <string name="from_toker_fm">From \n Toker FM</string>
    <string name="all_songs">All Songs</string>
    <string name="My_recordings">My Recordings</string>
    <string name="share_question">Do you want to share with friends and family? Press Share</string>
    <string name="default_value">Default</string>
    <string name="playback_volume">Playback Volume</string>
    <string-array name="volumes">
        <item>@string/default_value</item>
        <item>0.0</item>
        <item>0.1</item>
        <item>0.2</item>
        <item>0.3</item>
        <item>0.4</item>
        <item>0.5</item>
        <item>0.6</item>
        <item>0.7</item>
        <item>0.8</item>
        <item>0.9</item>
        <item>1</item>
    </string-array>
    <string name="recording_volume">Recording Volume</string>
    <string name="sign_in_error">Unable to sign in</string>
    <string name="attach_earphones">Attach wired earphones to record</string>
    <string name="feedback">Feedback</string>
    <string name="man_tone">Man</string>
    <string name="kid">Kid</string>
    <string name="woman">Woman</string>
    <string name="who_is_singing_the_song">Who is singing the song?</string>
    <string name="email_prompt">Listen to me sing\n</string>
    <string name="admin_window">admin window</string>
    <string name="song_name">Song Title</string>
    <string name="artist_name">Artist/Composer</string>
    <string name="submit">submit</string>
    <string name="sharing_failed">sharing failed</string>
    <string name="auth_failed">Authenticaton failed, please try again</string>
    <string name="error_from_the_beginning_of_sign_in">Sorry, there is a problem with our servers</string>
    <string name="no_pause_body_for_older_phones">Attention! Pausing song in the middle will not work, and the song will end.</string>
    <string name="no_pause_title_for_older_phones">Pause warning</string>
    <string name="video_loading">Video error</string>
    <string name="video_loading_body_if_video_not_loaded">This video has not been uploaded yet.\nSorry for the inconvenience</string>
    <string name="option_for_sharing_after_video_was_saved">You\'re recording was saved, do you want to share it?</string>
    <string name="no_thank_you">No thank you</string>
    <string name="reverb_on">reverb on</string>
    <string name="song_suggestion">Suggestion</string>
    <string name="add_song_window">What song would you like us to add?</string>
    <string name="exceed_message">You have exceeded you\'re storage capacity you must delete a song</string>
    <string name="popular">Popular</string>
    <string name="new_tag">New</string>
    <string name="menu">Menu</string>
    <string name="payment_history">Payment History</string>
    <string name="language_change">שפה</string>
    <string name="from">From</string>
    <string name="recording_tag_display_constant">" Recordings"</string>
    <string name="recording_search">Search In Recordings</string>
    <string name="with_video_when_chosing">Video recording</string>
    <string name="without_video_when_chosing">Video not recording</string>
    <string name="continue_text">Resume</string>
    <string name="stop">Stop</string>
    <string name="delete">Delete</string>
    <string name="close">Close</string>
    <string name="you_stopped_mid_recording_your_voice">You stopped mid-recording</string>
    <string name="you_finished_the_recording_your_voice">You finished the recording!</string>
    <string name="recordings_activity_interaction">Share your recordings with family and friends</string>
    <string name="comments">Comments</string>
    <string name="song_is_in_system">The song you requested is in the our system already.</string>
    <string name="sign_in_with_google"><u>Sign in with Google</u></string>
    <string name="sign_up_reason">This recording was amazing! In order to watch, save or share sign up to Ashira \n with your Google account.</string>
    <string name="sign_up_for_free">Sign up for free</string>
    <string name="easy_and_free_sign_up">(Easy and free sign up)</string>
    <string name="acknowledge_of_sign_in">Thank you for signing up to Ashira. \n You have up to 3 saves and shares free</string>
    <string name="member_invite">Access all of the songs!</string>
    <string name="subscribe">Subscribe</string>
    <string name="sub_pricing">36 shekel a month or 170 shekel a year</string>
    <string name="share_left_label">You have %1$d free shares left</string>
    <string name="don_t_send"><u>Don\'t send</u></string>
    <string name="backslash">" \\ "</string>
    <string name="send_without_video_click_option"><u>Send without video</u></string>
    <string name="open_share">Share</string>
    <string name="password_protected">Share with password</string>
    <string name="share_options_question">Who can view your recording?</string>
    <string name="you_have_3_remaining_shares_hint"><u>You have 3 remaining shares</u></string>
    <string name="alert_for_closing_app">Your recording is being saved, this may take a few minutes</string>
    <string name="link_prompt">We have a link for you\n this link is open to anyone who types it in</string>
    <string name="copy_the_link_to_clipboard">Copy the link to clipboard</string>
    <string name="share_with">Share with</string>
    <string name="change_share_settings"><u>Change share settings</u></string>
    <string name="video_link">Link:</string>
    <string name="video_password">Password:</string>
    <string name="enter_code">Enter code…</string>
    <string name="enter_the_coupon_code">Enter the coupon code</string>
    <string name="coupons">Coupons</string>
    <string name="incorrect_coupon">The code entered is not valid</string>
    <string name="month_coupon">Valid code. You have an extra month</string>
    <string name="yearly_coupon">Valid code. You have an extra year</string>
    <string name="free_shares_awarded">Valid code! You have %1$d extra shares</string>
    <string name="loading">Loading…</string>
    <string name="no_video_share">(without video)</string>
    <string name="with_video_share">With video</string>
    <string name="copyright_with_acum">Copyright with ACUM</string>
    <string name="this_video_is_password_protected">This video is password protected</string>
    <string name="watch_video_with_password">Watch</string>
    <string name="enter_password">Enter password…</string>
    <string name="wrong_password">Wrong password</string>
    <string name="incorrect_password_please_try_again">Incorrect password, please try again</string>
    <string name="ashira_jewish_karaoke">Ashira</string>
    <string name="report_inappropriate_content"><u>Report</u></string>
    <string name="you_paused_the_video_while_watching">You paused the video</string>
    <string name="exit_from_video">Exit</string>
    <string name="server_is_down">Our servers are backed up at the moment</string>
    <string name="inapproriate_under_review">This video is being reviewed by the Ashira staff</string>
    <string name="recording_does_not_exist">The recording does not exist in our server anymore</string>
    <string name="loading_percent">Downloading  %1$d</string>
    <string name="the_video_is_finished">The video is finished</string>
    <string name="play_again">Play again</string>
    <string name="sign_up">Sign up</string>
    <string name="report_received">Thank you for reporting! </string>
    <string name="cuccessfull_sign_in">Sign in successful!</string>
    <string name="request_received">Thank you for your request \n we will try our best to add this song!</string>
    <string name="member_sign_in">Subscribe</string>
    <string name="click_to_join">Click to join</string>
    <string name="the_recording_is_finished">The recording is finished</string>
    <string name="success">Success</string>
    <string name="recorded_without_video">Recording without video</string>
    <string name="delete_confirmation">You are about to delete this recording</string>
    <string name="sync">Sync</string>
    <string name="volume">Music</string>
    <string name="save_in_progress">"The recording is being saved"</string>
    <string name="unable_to_upload">We are unable to upload at this time</string>
    <string name="camera_fail">Camera failed to open</string>
    <string name="failed">Failed</string>
    <string name="share_failed">sharing failed</string>
    <string name="pitch_question">What is your pitch?</string>
    <string name="high">High</string>
    <string name="regular">Regular</string>
    <string name="finshed_watching_recording">You finished watching the recording!</string>
    <string name="agreed">Agree</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="ashira_privacy_policy">Privacy policy</string>
    <string name="ashira_terms_of_use">Ashira Terms of Use</string>
    <string name="privacy_policy_amp_terms_of_use"><![CDATA[Privacy Policy & Terms of Use]]></string>
    <string name="download_song_requests">Download Song Requests</string>
    <string name="add_song_length">Add Song Length</string>
    <string name="email">Email</string>
    <string name="add">Add</string>
    <string name="add_song">Add Song</string>
    <string name="add_internet_user">Add Internet User</string>
    <string name="date">End Time</string>
    <string name="get_all_users">Get all users</string>
    <string name="privacy">Privacy</string>
</resources>