<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/share_options_2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/end_songs_background"
    android:orientation="vertical"
    android:padding="5dp"
    android:theme="@style/AppTheme"
    android:weightSum="10"
    tools:context=".SingActivity">

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/no_hardcode_dimension"
        android:layout_gravity="center"
        android:layout_weight="1.6"
        android:background="@drawable/menu_header"
        android:gravity="center"
        android:text="@string/share_save"
        android:textColor="@android:color/white"
        android:textSize="36sp" />

    <LinearLayout
        android:id="@+id/choices"
        android:layout_width="match_parent"
        android:layout_height="@dimen/no_hardcode_dimension"
        android:layout_weight="7.1"
        android:background="@drawable/menu_background"
        android:orientation="vertical"
        android:weightSum="3">

        <!--        <androidx.constraintlayout.widget.Guideline-->
        <!--            android:id="@+id/top_guide"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:orientation="horizontal"-->
        <!--            app:layout_constraintGuide_percent="0.33" />-->

        <!--        <androidx.constraintlayout.widget.Guideline-->
        <!--            android:id="@+id/bottom_guide"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:orientation="horizontal"-->
        <!--            app:layout_constraintGuide_percent="0.66" />-->

        <TextView
            android:id="@+id/remaining_free_shares"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1.2"
            android:fontFamily="@font/varela_round_regular"
            android:gravity="center"
            android:text="@string/you_have_3_remaining_shares_hint"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/offer_of_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1.2"
            android:fontFamily="@font/varela_round_regular"
            android:gravity="center"
            android:text="@string/link_prompt"
            android:textColor="@android:color/white"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/ic_search_port"
            android:fontFamily="@font/varela_round_regular"
            android:gravity="center"
            android:text="@string/loading"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/copy_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="15dp"
            android:background="@drawable/share_background"
            android:fontFamily="@font/varela_round_regular"
            android:paddingHorizontal="25dp"
            android:text="@string/copy_the_link_to_clipboard"
            android:textColor="@color/sing_up_hover"
            android:textSize="18sp" />

        <Button
            android:id="@+id/share_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="15dp"
            android:background="@drawable/share_background"
            android:fontFamily="@font/varela_round_regular"
            android:text="@string/share_with"
            android:textColor="@color/sing_up_hover"
            android:textSize="18sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1.3"
        android:background="@drawable/menu_footer"
        android:gravity="center"
        android:text="@string/change_share_settings"
        android:textColor="@color/sing_up_hover"
        android:textSize="13sp" />

</LinearLayout>