<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/new_user_share"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/end_songs_background"
    android:orientation="vertical">


    <TextView
        android:id="@+id/share_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/no_hardcode_dimension"
        android:layout_margin="5dp"
        android:layout_weight="0.2"
        android:background="@drawable/menu_header"
        android:fontFamily="@font/varela_round_regular"
        android:gravity="center"
        android:text="@string/share"
        android:textColor="@android:color/white"
        android:textSize="30sp" />

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="@dimen/no_hardcode_dimension"
        android:layout_gravity="center"
        android:layout_weight="0.8"
        android:gravity="center"
        android:orientation="vertical">

            <TextView
                android:id="@+id/ackknowledge_signin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/acknowledge_of_sign_in"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:layout_margin="15dp"/>

            <Button
                android:id="@+id/save_free_recordings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/end_song_button_circles"
                android:fontFamily="@font/varela_round_regular"
                android:gravity="center"
                android:text="@string/share_save"
                android:textColor="@color/sing_up_hover"
                android:textSize="24sp"
                android:layout_margin="10dp"/>

            <TextView
                android:id="@+id/free_saves_left_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="You have 3 shares left"
                android:textColor="@android:color/white"
                android:textSize="15sp" />


        </LinearLayout>
</LinearLayout>